KnowledgeFormViewModel and select component for the problems

--- a/Versality/Views/Shared/_Layout.cshtml
+++ b/Versality/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="TheProblems" asp-action="Index">The Problems in Work</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Knowledges" asp-action="Index">Knowledge Management</a>
+                        </li>
                     </ul>
                 </div>
             </div>
