--- a/Versality/Views/Knowledges/Create.cshtml
+++ b/Versality/Views/Knowledges/Create.cshtml
@@ -19,7 +19,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="Knowledge.TheProblemId" class="control-label"></label>
-                <select asp-for="Knowledge.TheProblemId" asp-items="@(new SelectList(Model.TheProblem,"Id", "Name"))" class="form-control"></select> 
+                <select asp-for="Knowledge.TheProblemId" asp-items="@(new SelectList(Model.TheProblem,"Id", "Name"))" class="form-control"></select>
+                <label asp-for="Knowledge.SectorId" class="control-label"></label>
+                <select asp-for="Knowledge.SectorId" asp-items="@(new SelectList(Model.TheSectors,"Id", "Name"))" class="form-control"></select>
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
