--- a/Versality/Views/Knowledges/Index.cshtml
+++ b/Versality/Views/Knowledges/Index.cshtml
@@ -15,6 +15,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.ActionLeader)
             </th>
+            <th>
+                The Problem
+            </th>
+            <th>
+                Sector
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -23,6 +29,12 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.ActionLeader)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TheProblem.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Sector.Name)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
