Redirect to report solution according the problem choice

--- a/Versality/Views/Knowledges/Index.cshtml
+++ b/Versality/Views/Knowledges/Index.cshtml
@@ -1,47 +1,52 @@
 ﻿@model IEnumerable<Versality.Models.Knowledge>
+   
 
-@{
-    ViewData["Title"] = "Knowledge Management";
+    @{
+        ViewData["Title"] = "Knowledge Management";
+    }
+
+
+
+    <h1>Knowledge Management</h1>
+
+    <p>
+        <a asp-action="Create">Management Request</a>
+    </p>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.ActionLeader)
+                </th>
+                <th>
+                    The Problem
+                </th>
+                <th>
+                    Sector
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+                    {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ActionLeader)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TheProblem.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Sector.Name)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
+                    <a target="_blank" asp-action="Result" asp-route-id="@item.TheProblem.Id">Result</a> 
+                </td>
+            </tr>
 }
-
-<h1>Knowledge Management</h1>
-
-<p>
-    <a asp-action="Create">Management Request</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.ActionLeader)
-            </th>
-            <th>
-                The Problem
-            </th>
-            <th>
-                Sector
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.ActionLeader)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TheProblem.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Sector.Name)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+        </tbody>
+    </table>
