--- a/Versality/Views/Home/Index.cshtml
+++ b/Versality/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to Versality System</h1>
+    <p>The system that performs the transversality between Knowledge Management and Active Learning Methods</p>
 </div>
