--- a/Versality/Views/Shared/_Layout.cshtml
+++ b/Versality/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Knowledges" asp-action="Index">Knowledge Management</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Forums" asp-action="Index">Socialization</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -40,7 +43,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - Versality - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - Versality
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
